syntax = "proto3";
//protoc -I internal/api/protos/proto internal/api/protos/proto/posts.proto --go_out=./internal/api/protos/gen --go_opt=paths=source_relative --go-grpc_out=./internal/api/protos/gen/ --go-grpc_opt=paths=source_relative
//protoc -I api/protos/proto api/protos/proto/posts.proto --go_out=./api/protos/gen --go_opt=paths=source_relative --go-grpc_out=./api/protos/gen/ --go-grpc_opt=paths=source_relative

package blog;

option go_package = "posts.sso.v1;postsv1";

service PostService{
	rpc getUserPosts(getUserPostsRequest) returns (getUserPostsResponse);
	rpc getPost(getPostRequest) returns (getPostResponse);
	rpc deletePost(deletePostRequest) returns (deletePostResponse);
	rpc updatePost(updatePostRequest) returns (updatePostResponse);
	rpc createPost(createPostRequest) returns (createPostResponse);
}

message Post {
	string id = 1;
	string user_id = 2;
	string title = 3;
	string textContent = 4;
	optional string imagesContent = 5;
	uint64 likes = 6;
}

message getPostRequest{
	string id = 1;
}

message getPostResponse{
	Post posts = 1;
}

message getUserPostsRequest{
	string user_id = 1;
	uint64 size = 2;
	uint64 page = 3;
}

message getUserPostsResponse{
	repeated Post posts = 1;
	uint64 total_count = 2;
}

message deletePostRequest{
	string id = 1;
}

message deletePostResponse{
	bool is_deleted = 1;
}

message updatePostRequest{
	string id = 1;
	map<string, string> update_data = 2;
}

message updatePostResponse{
	string id = 1;
	Post post = 2;
}

message createPostRequest{
	string user_id = 1;
	string title = 2;
	string textContent = 3;
	optional string imagesContent = 4;
}

message createPostResponse{
	string id = 1;
	Post post = 2;
}